--- a/Atividades/Compilador/Makefile
+++ b/Atividades/Compilador/Makefile
@@ -1,13 +1,7 @@
 all: 	
 		clear
-		lex lexico.l
-		yacc -d sintatico.y
+		lex lexica.l
+		yacc -d sintatica.y
 		g++ -o glf y.tab.c -ll
 
 		./glf < exemplo.foca
-
-clean:
-	rm y.tab.c
-	rm y.tab.h
-	rm lex.yy.c
-	rm glf
